--- a/index.html
+++ b/index.html
@@ -1,65 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"  crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
 
-  <title>Employee List</title>
+    <title>Employee List</title>
 </head>
+
 <body>
-  <div class="container">
-    <div class="row">
-      <h1>Employee List</h1>
+    <div class="container">
+        <div class="row">
+            <h1>Employee List</h1>
+        </div>
+
+        <div class="row">
+            <div class="employeers">
+                <table class="table">
+                    <thead class="table__head">
+                        <tr class="table__row">
+
+                        </tr>
+                    </thead>
+                    <tbody class="table__body">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
-
-    <!-- <div class="row">
-      <table class="table">
-        <thead class="table__head">
-          <tr class="table__row">
-            <th class="table__head--item" scope="col">#</th>
-            <th class="table__head--item" scope="col">First</th>
-            <th class="table__head--item" scope="col">Last</th>
-            <th class="table__head--item" scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody class="table__body">
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr> 
-        </tbody>
-      </table>
-    </div> -->
-
-    <div class="row">
-      <div class="employeers">
-        <table class="table">
-          <thead class="table__head">
-            <tr class="table__row">
-               
-            </tr>
-          </thead>
-          <tbody class="table__body">
-            <tr class="table__row">
-              
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script> 
-  <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
