Add btn show man, show women

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         </div>
 
         <div class="row">
+          <button type="button" class="btn btn-warning btn-man">Show Man</button>
+          <button type="button" class="btn btn-warning btn-woman">Show Woman</button>
+        </div>
+
+        <div class="row">
             <div class="employeers">
                 <table class="table">
                     <thead class="table__head">
