Add refresh button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="row">
           <button type="button" class="btn btn-warning btn-man">Show Man</button>
           <button type="button" class="btn btn-warning btn-woman">Show Woman</button>
+          <button type="button" class="btn btn-info btn-refresh">Refresh</button>
         </div>
 
         <div class="row">
