--- a/index.html
+++ b/index.html
@@ -14,32 +14,93 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <h1>Employee List</h1>
-        </div>
+<div class="container">
+  <div class="row">
+      <h1>Employee List</h1>
+  </div>
 
-        <div class="row">
-          <button type="button" class="btn btn-warning btn-man">Show Man</button>
-          <button type="button" class="btn btn-warning btn-woman">Show Woman</button>
-          <button type="button" class="btn btn-info btn-refresh">Refresh</button>
-        </div>
+  <div class="row">
+    <button type="button" class="btn btn-info btn-refresh"><i class="fas fa-sync-alt"></i></button>
+    <button type="button" class="btn btn-warning btn-man">Show Man</button>
+    <button type="button" class="btn btn-warning btn-woman">Show Woman</button> 
+    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modalWindow">
+      Add new employeer
+    </button>
+  </div>
 
-        <div class="row">
-            <div class="employeers">
-                <table class="table">
-                    <thead class="table__head">
-                        <tr class="table__row">
+<!-- Modal -->
+<div class="modal fade" id="modalWindow" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
 
-                        </tr>
-                    </thead>
-                    <tbody class="table__body">
-                    </tbody>
-                </table>
+      <div class="modal-body">
+        <form>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+            <label for="inputFirstName">First Name</label>
+            <input type="text" class="form-control" id="inputFirstName" placeholder="First name" required>
             </div>
-        </div>
+            <div class="form-group col-md-6">
+              <label for="inputLastName">Last Name</label>
+              <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" required>
+            </div>
+          </div>
 
+          <div class="form-row"> 
+            <div class="form-group col-md-6">
+              <label for="inputAge">Age</label>
+              <input type="number" class="form-control" id="inputAge" placeholder="Age" required>
+            </div>
+          
+            <div class="form-group col-md-6">
+              <label class="mr-sm-2" for="inputSex">Sex</label>
+              <select class="custom-select mr-sm-2" id="inputSex"> 
+                <option value="male">Male</option>
+                <option value="female">Female</option> 
+              </select>
+            </div> 
+
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="itsEmployeer">
+                <label class="form-check-label" for="itsEmployeer">
+                  Employeer
+                </label> 
+              </div>
+            </div>
+          </div> 
+
+        </form>
+      </div> 
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success btn-addEmployeer">Send</button>
+      </div>
     </div>
+  </div>
+</div>
+
+<div class="row">
+    <div class="employeers">
+        <table class="table">
+          <thead class="table__head">
+            <tr class="table__row">
+
+            </tr>
+          </thead>
+          <tbody class="table__body">
+          </tbody>
+        </table>
+    </div>
+</div> 
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
