--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <h1>Employee List</h1>
   </div>
 
-  <div class="row">
-    <button type="button" class="btn btn-info btn-refresh"><i class="fas fa-sync-alt"></i></button>
-    <button type="button" class="btn btn-warning btn-man">Show Man</button>
-    <button type="button" class="btn btn-warning btn-woman">Show Woman</button> 
-    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modalWindow">
-      Add new employeer
+  <div class="row ">
+    <button type="button" class="btn btn-action btn-info btn-refresh"><i class="fas fa-sync-alt"></i></button>
+    <button type="button" class="btn btn-action btn-warning btn-man"><i class="fas fa-male"></i></button>
+    <button type="button" class="btn btn-action btn-warning btn-woman"><i class="fas fa-female"></i></button>
+    <button type="button" class="btn btn-action btn-success" data-toggle="modal" data-target="#modalWindow">
+      <i class="fas fa-plus-square"></i>
     </button>
   </div>
 
@@ -66,7 +66,7 @@
               </select>
             </div> 
 
-            <div class="form-group">
+            <div class="form-group col-md-12">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="itsEmployeer">
                 <label class="form-check-label" for="itsEmployeer">
