--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success btn-addEmployeer">Send</button>
+        <button type="button" class="btn btn-success btn-addEmployeer" data-dismiss="modal">Send</button>
       </div>
     </div>
   </div>
